# tidocs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: docs.rs  main.rs  ui.rs
src/snapshots/: clidoc__ui__tests__code_fence_indentation.snap  clidoc__ui__tests__full_rustdoc_page.snap  tidocs__ui__tests__code_fence_indentation.snap.new  tidocs__ui__tests__full_rustdoc_page.snap.new
tests/: integration_test.rs  virtual_terminal_test.rs
