[package]
name = "clidoc"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
html-to-markdown-rs = "3.5.0-rc.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
dirs = "6"
ratatui-markdown = { version = "0.3", default-features = false, features = ["markdown", "viewer"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
ctrlc = "3.5.2"
flate2 = "1"
