[package]
name = "clidoc"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
html-to-markdown-rs = "3.5.0-rc.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
dirs = "6"
tui-markdown = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
ctrlc = "3.5.2"
flate2 = "1"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
